# FCTv3Tutorial

./: .gitmodules  CMakeLists.txt  Model.h  README.md  Renderer.cpp  Shader.cpp  TextureAsset.cpp  Utility.cpp  main.cpp  native-lib.cpp  todo.md  vcpkg.json
Demo/: AutoReviewport.h  CMakeLists.txt  HighFpsDemo.cpp  RenderGraphDemo.cpp  UnlimitedScaleVertexRenderDemo.cpp  VertexRender3DDemo.cpp  main.cpp  todo.txt
FCT/: ALL_Headers.h  Bases.h  CMakeLists.txt  FCTAPI.h  ThirdParty.h  ToolDefine.h  classdef.h  headers.cpp  headers.h  predefine.h
FCT/Base/: Flags.h  Noncopyable.h  string.h
FCT/Context/: ConstBuffer.h  Context.cpp  Context.h  Context.hpp  DataTypes.cpp  DataTypes.h  DrawCall.h  FencePool.h  Format.h  IPassResource.c  IPipelineResource.h  IRenderTarget.h  Image.cpp  Image.h  ImageRenderTarget.cpp  ImageRenderTarget.h  InputLayout.h  Job.h  Material.h  Matrix.h  Mesh.h  MutilBufferImage.cpp  MutilBufferImage.h  Object.h  Pass.h  PassResource.h  PassSource.h  Pipeline.cpp  Pipeline.h  PixelShader.cpp  PixelShader.h  Primitives.h  RenderGraph.cpp  RenderGraph.h  ResourceLayout.h  SemaphorePool.h  ShaderCompiler.h  ShaderGenerate.h  ShaderGenerator.cpp  ShaderGenerator.h  (+37 more)
FCT/DebugTools/: Android_Out.cpp  Android_Out.h  MemoryCheak.cpp  MemoryCheak.h  OutStream.cpp  OutStream.h  ScopeTimer.cpp  ScopeTimer.h
FCT/ImageLoader/: FreeImage_ImageLoader.cpp  FreeImage_ImageLoader.h  ImageLoader.h
FCT/Memory/: ObjectPool.h
FCT/ModelLoader/: Assimp_ModelLoader.cpp  Assimp_ModelLoader.h  ModelLoader.h
FCT/MutilThreadBase/: Computation.h  RefCount.h  SharePtr.h  TlsPtr.h
FCT/RHI/: BlendState.h  CommandBuffer.h  CommandPool.h  ConstBuffer.h  DepthStencilState.h  DepthStencilView.h  DescriptorPool.h  Fence.h  IPipelineResource.h  Image.h  IndexBuffer.h  InputLayout.h  Pass.h  PassGroup.h  Pipeline.h  PixelShader.cpp  PixelShader.h  RasterizationPipeline.h  RasterizationState.h  RenderPass.h  RenderTargetView.h  RootSign.h  Sampler.h  Semaphore.h  ShaderBinary.cpp  ShaderBinary.h  Swapcain.h  TextureView.h  VK_BlendState.cpp  VK_BlendState.h  VK_CommandBuffer.cpp  VK_CommandBuffer.h  VK_CommandPool.cpp  VK_CommandPool.h  VK_ConstBuffer.cpp  VK_ConstBuffer.h  VK_DepthStencilState.cpp  VK_DepthStencilState.h  VK_DepthStencilView.cpp  VK_DepthStencilView.h  (+44 more)
FCT/Runtime/: ActivityWrapper.cpp  ActivityWrapper.h  AndroidOut.cpp  AndroidOut.h  Android_Runtime.cpp  Android_Runtime.h  Android_native_app_glue.cpp  Android_native_app_glue.h  GameActivity.cpp  JavaObjectWrapper.h  ThirdParty.cpp  Win32_Runtime.cpp  runtime.cpp  runtime.h
FCT/Shader/: fcttmp.frag  fcttmp.vert
FCT/UI/: Android_UICommon.cpp  Android_UICommon.h  Android_Window.cpp  Android_Window.h  Android_WindowShareData.cpp  Android_WindowShareData.h  AutoViewport.cpp  AutoViewport.h  CallBackHandler.h  EventHandler.h  GLFW_UICommon.cpp  GLFW_UICommon.h  GLFW_Window.cpp  GLFW_Window.h  InputStateEventHanndler.h  Window.cpp  Window.h
FCT/VertexAndText/: Font.h  Freetype_Font.cpp  Freetype_Font.h  Freetype_FontCommon.cpp  Freetype_FontCommon.h  VertexContext.cpp  VertexContext.h  VertexPath.h
FCT_CEGUI/: ThirdParty.h  headers.h
FCT_CEGUI/Renderer/: CEGUIGeometryBuffer.cpp  CEGUIGeometryBuffer.h  CEGUIRenderTarget.cpp  CEGUIRenderTarget.h  CEGUITexture.cpp  CEGUITexture.h  CEGUITextureTarget.cpp  CEGUITextureTarget.h  CEGUIWindowTarget.cpp  CEGUIWindowTarget.h  Renderer.cpp  Renderer.h
FCT_CEGUI/src/: FCT_CEGUI.h
FCT_IMGUI/: CMakeLists.txt  FCTAPI.h  GLFW_VK_ImguiContext.cpp  GLFW_VK_ImguiContext.h  ImguiContext.h  ThirdParty.h  headers.cpp  headers.h
FCT_IMGUI/src/: FCT_IMGUI.h
MQEngine/: CMakeLists.txt  main.cpp  tmpShader.hlsl
Snake/: AutoReviewport.h  GamePage.h  MenuPage.h  Page.h
